--- a/H5demo/demo01/h5form.html
+++ b/H5demo/demo01/h5form.html
@@ -18,7 +18,7 @@
         <option value="中国海洋大学">
       </datalist>
     <input type="date" name="name">
-    <button type="submit" name="button">提交啊,笨蛋</button>
+    <button type="submit" name="button">快点提交啊</button>
   </form>
   <mark style="background-color:blue">fsfdsfsd</mark>
 </body>
